--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -42,6 +42,10 @@ main {
         p {
           width: 90%;
         }
+
+        &__close {
+          cursor: pointer;
+        }
       }
     }
 
