--- a/style/base/_general.scss
+++ b/style/base/_general.scss
@@ -1,10 +1,11 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 
+body {
+  font-family: "Josefin Sans", sans-serif;
   background-image: url("../../images/bg-desktop-light.jpg");
   background-repeat: no-repeat;
   background-color: #333555;
+  background-size: contain;
   padding: 1rem;
 }
 
@@ -21,12 +22,19 @@ body {
   cursor: pointer;
 
   &.checked {
-    background-image: url("../../images/icon-check.svg");
-    background: linear-gradient(
+    position: relative;
+    background-image: linear-gradient(
       135deg,
       hsl(192, 100%, 67%),
       hsl(280, 87%, 65%)
     );
+
+    &::after {
+      content: url("../../images/icon-check.svg");
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -5%);
+    }
   }
 }
 
