Complete theme switcher and add responsiveness

--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -5,7 +5,7 @@
   margin: 3rem auto 2rem;
 
   &__title {
-    color: white;
+    color: var(--text-title);
     letter-spacing: 1.2rem;
     font-size: 2.6rem;
   }
@@ -22,27 +22,34 @@ main {
   .main__input {
     display: flex;
     padding: 1.2rem;
-    background-color: white;
+    background-color: var(--background-components);
     border-radius: 5px;
 
     input {
+      background-color: var(--background-components);
       width: 90%;
       border: none;
       outline: none;
+
+      &[placeholder] {
+        color: var(--text-color);
+      }
     }
   }
 
   .todos {
     margin-top: 1.4rem;
-    background-color: white;
+    background-color: var(--background-components);
     border-radius: 5px;
+    box-shadow: var(--drop-shadow);
+    color: var(--text-color);
 
     &-list {
       .todo {
         display: flex;
         align-items: center;
         padding: 1.2rem;
-        border-bottom: 1px solid grey;
+        border-bottom: 1px solid var(--dark-grey);
 
         p {
           width: 90%;
@@ -57,9 +64,14 @@ main {
     &-list__filter {
       display: flex;
       font-weight: bold;
+      margin: 0;
 
       li {
         padding: 0 0.3rem;
+
+        .active-filter {
+          color: var(--primary-color);
+        }
       }
     }
 
@@ -68,8 +80,19 @@ main {
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      padding: 0 1rem;
       font-size: 14px;
+      color: var(--light-grey);
+      padding: 1rem;
+    }
+  }
+}
+
+.filter-wrapper-outside {
+  ul {
+    justify-content: center;
+    padding: 1rem;
+    li {
+      padding: 0 1rem;
     }
   }
 }
