--- a/style/utils/_var.scss
+++ b/style/utils/_var.scss
@@ -5,16 +5,30 @@
     hsl(192, 100%, 67%),
     hsl(280, 87%, 65%)
   );
-  --light-grey: hsl(233, 11%, 84%);
+  --light-grey: hsl(233, 14%, 35%);
   --dark-grey: hsl(236, 9%, 61%);
+  --text-title: hsl(0, 0%, 98%);
+  --drop-shadow: 0 15px 30px rgba(0, 0, 0, 0.05);
 
   --text-color: #333;
   --background-site: hsl(236, 33%, 92%);
   --background-components: hsl(0, 0%, 98%);
+  --background-img: url("../../images/bg-desktop-light.jpg");
 }
 
 [data-theme="dark"] {
   --text-color: #f3f6fb;
-  --background-site: hsl(237, 14%, 26%);
-  --background-components: hsl(233, 14%, 35%);
+  --background-site: hsl(235, 21%, 11%);
+  --background-components: hsl(235, 24%, 19%);
+  --background-img: url("../../images/bg-desktop-dark.jpg");
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    --background-img: url("../../images/bg-mobile-light.jpg");
+  }
+
+  [data-theme="dark"] {
+    --background-img: url("../../images/bg-mobile-dark.jpg");
+  }
 }
