--- a/style/base/_general.scss
+++ b/style/base/_general.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 body {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   background-image: var(--background-img);
   background-repeat: no-repeat;
   background-color: var(--background-site);
@@ -12,7 +12,7 @@ body {
 .circle,
 .todo__circle {
   height: 25px;
-  width: 25px;
+  aspect-ratio: 1 / 1;
   border-radius: 50%;
   border: 1px solid var(--dark-grey);
   margin-right: 1rem;
@@ -26,7 +26,7 @@ body {
     background-image: var(--check-background);
 
     &::after {
-      content: url("../../images/icon-check.svg");
+      content: url('../../images/icon-check.svg');
       position: absolute;
       left: 50%;
       transform: translate(-50%, -5%);
