--- a/style/base/_media-queries.scss
+++ b/style/base/_media-queries.scss
@@ -12,6 +12,12 @@
       padding: 0;
     }
   }
+
+  .todo {
+    img {
+      display: block;
+    }
+  }
 }
 
 @media screen and (max-width: 550px) {
