--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -49,7 +49,7 @@ main {
         display: flex;
         align-items: center;
         padding: 1.2rem;
-        border-bottom: 1px solid var(--dark-grey);
+        border-bottom: 1px solid var(--light-grey);
 
         p {
           width: 90%;
@@ -57,6 +57,12 @@ main {
 
         &__close {
           cursor: pointer;
+        }
+
+        &:hover {
+          img {
+            display: block;
+          }
         }
       }
     }
@@ -93,6 +99,7 @@ main {
     padding: 1rem;
     li {
       padding: 0 1rem;
+      color: var(--light-grey);
     }
   }
 }
